Sat Feb 22 01:34:08 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* Makefile.in (SHLIB_EXPDEPS): s/.so/$(SHLIBEXT)

Wed Jan 15 20:59:11 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new library build procedure.

Tue Dec  3 15:14:29 1996  Barry Jaspan  <bjaspan@mit.edu>

	* server_acl.c (acl_load_acl_file): log errors via
 	krb5_klog_syslog, not fprintf and com_err [krb5-admin/238]; don't
 	coredump when an acl line is too long; handle catchall_entry ==
 	NULL

Fri Nov 22 11:11:34 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (SHLIB_LIBS): Do not link shared against -ldb [224]

Tue Nov 26 03:04:04 1996  Sam Hartman  <hartmans@mit.edu>

	* server_acl.c (acl_load_acl_file): Fix coredump by allowing
 	catchall_entry to be null, but do not reference it if it is.
  	Thanks to marc.  [242]

Mon Nov 25 17:53:20 1996  Barry Jaspan  <bjaspan@mit.edu>

	* server_acl.c: set acl_catchall_entry to "" instead of NULL,
 	since it is presumed to contain something, but we don't want any
 	default entry [krb5-admin/237]

Wed Nov 13 19:20:36 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (clean-unix): Remove shared/*.

Mon Nov 11 17:01:00 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): fix memory leak
 	handling tl_data

Thu Nov  7 16:42:38 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_iters.c (glob_to_regexp): a principal glob with no @
 	defaults to @*, not @LOCAL.REAM [krb5-admin/161]
 
Wed Nov  6 10:45:12 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* server_init.c (kadm5_init): Use a more fined grained error
 		code, KADM5_MISSING_CONF_PARAMS instead of
 		KRB5_CONFIG_BADFORMAT

Wed Nov  6 16:22:05 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): don't free the
 	caller's tl_data (oops)

Fri Nov  1 13:18:40 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): update for new tl_data
 	semantics [krb5-admin/140]
